--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "webview-dist/index.js",
   "types": "webview-dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c ./webview-src/rollup.config.js",
+    "build": "rollup -c ./rollup.config.js",
     "prepublishOnly": "yarn build",
     "pretest": "yarn build"
   },
