--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "types": ["@types"]
     },
     "declaration": true,
-    "declarationDir": "../webview-dist",
+    "declarationDir": "./js-dist",
     "rootDir": "./"
   },
   "include": ["./"]
