--- a/js-guest/tsconfig.json
+++ b/js-guest/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ESNext",
+    "moduleResolution": "node",
     "strict": true,
     "allowJs": true,
     "esModuleInterop": true,
@@ -9,7 +10,7 @@
       "types": ["@types"]
     },
     "declaration": true,
-    "declarationDir": "./js-dist",
+    "declarationDir": "../js-dist",
     "rootDir": "./"
   },
   "include": ["./"]
